infra/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
spec:
  parentRefs:
    - name: cocoa-gateway     
      sectionName: http
      namespace: argocd
  hostnames:
    - "localhost"              
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /           
      backendRefs:
        - name: cocoa-be
          port: 80
